--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,34 @@ body {
   margin-bottom: 0;
   min-height: 30px;
   height: 36px;
-  padding: 0.3rem 0.5rem 1.2rem 1.2rem !important;
   display: inline-block;
   width: 100%;
 }
 
+.side_menu {
+     width: 20%;
+     display: inline-block;
+ }
+
+.main {
+    width: 80%;
+    float: right;
+    display: inline-block;
+}
+
 .signout {
   float: right
+}
+
+.menu_btn {
+  min-width: 160px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  padding: 0.6rem 0.6rem 0.8rem 0.8rem;
+  border-radius: 3px;
+  text-align: left;
+}
+
+.username {
+  margin-left: 10px
 }
