--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,8 @@ body {
 
 .menu_btn {
   min-width: 160px;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-left: 10px;
+  margin-top: 16px;
   padding: 0.6rem 0.8rem 0.8rem 1.0rem;
   border-radius: 3px;
   text-align: left;
