--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,17 @@ body {
   height: 36px;
   display: inline-block;
   width: 100%;
+  cursor: default;
+}
+
+.radio-inline {
+  padding: 6px;
+  line-height: 2.2;
+}
+
+.form-label {
+  margin-top: 18px!important;
+  font-weight: bold;
 }
 
 .side_menu {
@@ -28,6 +39,7 @@ body {
 }
 
 .menu_btn {
+  cursor: pointer;
   min-width: 160px;
   margin-left: 10px;
   margin-top: 16px;
@@ -44,11 +56,50 @@ body {
 .user_display {
   display: inline-flex;
   margin-top: 6px;
-  margin-left: 18px
+  margin-left: 10px
+}
+
+.username-input input {
+  width: 200px;
+  border-radius: 2px;
+  padding-left: 2px;
+  line-height: 1.5;
+  margin-top: 5px;
+}
+
+.avatar-select {
+  margin-top: 7px;
+  width: 56px;
+  height: 35px;
+  text-align: center;
+  font-size: large;
+}
+
+.top_navbar .avatar-span {
+  margin-left: 16px;
+  border-radius: 2px;
+  background-color: white;
 }
 
 .right_nav_btn {
   float: right;
   margin-top: 6px;
   margin-right: 12px;
+}
+
+.summary-text h4 {
+  font-size: 14px;
+  font-weight: normal;
+}
+
+a {
+  text-decoration: none;
+}
+
+footer {
+  position:absolute;
+  left: 20px;
+  bottom: 20px;
+  right: 0;
+  font-size: 12px;
 }
