--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,16 @@ pre {
 }
 
 .mouse_track_code {
-  width: 42%;
+  width: 44%;
   float: right;
   padding-top: 2px;
-  padding-left: 14px;
+  padding-left: 26px;
   border-left: solid 1px #cdcdcd;
   border-bottom: solid 1px #cdcdcd;
+}
+
+.mouse_track_code pre {
+  margin-left: 14px;
 }
 
 .top_navbar {
@@ -49,22 +53,23 @@ pre {
 }
 
 .side_menu {
-     width: 20%;
-     display: inline-block;
+  width: 18%;
+  display: inline-block;
+  padding-top: 10px;
  }
 
 .main {
-    width: 80%;
+    width: 82%;
     float: right;
     display: inline-block;
 }
 
 .menu_btn {
   cursor: pointer;
-  min-width: 160px;
-  margin-left: 10px;
+  min-width: 13vw;
+  margin-left: 16px;
   margin-top: 16px;
-  padding: 0.6rem 0.8rem 0.8rem 1.0rem;
+  padding: 0.6rem 0.8rem 0.8rem 1.6rem;
   border-radius: 3px;
   text-align: left;
 }
@@ -109,6 +114,7 @@ pre {
 }
 
 .summary-text h4 {
+  margin-top:26px;
   font-size: 14px;
   font-weight: normal;
 }
@@ -118,9 +124,31 @@ a {
 }
 
 footer {
-  position:absolute;
-  left: 20px;
-  bottom: 20px;
+  position:fixed;
+  left: 0;
+  bottom: 4px;
   right: 0;
   font-size: 12px;
+}
+
+.footer_link {
+  margin-left: 14px;
+}
+
+.footer_link a {
+  color: papayawhip !important;
+}
+
+.hoc_examples {
+  display: inline;
+}
+
+.user_settings {
+  margin-top: 26px;
+  margin-left: 24px;
+}
+
+.turtle {
+  font-size: large;
+  margin-left: 14px;
 }
