Update various things

--- a/src/index.css
+++ b/src/index.css
@@ -186,7 +186,7 @@ footer {
 
 .fancy-border-beige {
   width: auto;
-  border: 1px solid #ffebb9;
+  border: 1px solid #ffda77;
   border-radius: 2px;
   padding: 5px;
 }
