Add key press demo and various minor updates

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ footer {
 .search_form_field label{
   display: inline-block;
   padding-right: 20px;
-  color: #033624;
+  color: #4b464d;
   font-size: small;
 }
 
